Fix session & login redirects

--- a/html/Intro.html
+++ b/html/Intro.html
@@ -25,7 +25,7 @@ style= "background-image: url(../image/bg3.jpg); background-repeat: no-repeat; b
 
     </div>
 
-    <a href="../php/loginStudent.php" class="bubble-button">click here</a>
+    <a href="../php/login.php" class="bubble-button">click here</a>
     <script src="/js/main.js"></script>
 
 </body>
