--- a/html/index.html
+++ b/html/index.html
@@ -17,9 +17,15 @@
 </head>
 
 <body>
+	<script type="module" src="..\chatbox\index-Dsumbowl.js"></script>
+    <link rel="stylesheet" href="..\chatbox\index-vXR3yhj7.css">
+    <div style="position: fixed; bottom: 23px; right: 76px; z-index: 50;">
+        <script src="https://static.elfsight.com/platform/platform.js" async></script>
+        <div class="elfsight-app-34c1fc02-7809-4a7b-b810-871487813e1f" data-elfsight-app-lazy></div>
+    </div>
+    <div id="root"></div>
 	<div class="hero-section">
-		<div class="about-text hover-target">ABOUT US</div>
-		<div class="contact-text hover-target">CONTACT US</div>
+		<div class="contact-text text-center hover-target">CONTACT US</div>
 		<div class="section-center">
 			<div class="container-fluid">
 				<div class="row justify-content-center">
@@ -45,264 +51,6 @@
 					<script src="./script_but.js"></script>
 				</div>
 			</div>
-		</div>
-	</div>
-
-	<div class="about-section">
-		<div class="about-close hover-target"></div>
-		<div class="section-center">
-			<div class="col-12 text-center">
-				<a class="hover-target">ABOUT US</a>
-			</div>
-			<table style="margin: auto;">
-				<tr>
-					<th>
-						<div class="card">
-							<div class="ds-top"></div>
-							<div class="avatar-holder">
-								<img src="./acap.jpeg" alt="Albert Einstein">
-							</div>
-							<div class="name">
-								<a href="https://www.instagram.com/adam_k1m1?igsh=MXB6OWN3enRranhueA%3D%3D&utm_source=qr"
-									target="_blank">Asyraaf Danial<br>Project Manager</br></a>
-							</div>
-							<div class="ds-info">
-								<div class="ds pens">
-									<h6 title="Number of pens created by the user">STUDENT ID <i class="fas fa-edit">
-											2022745067</i></h6>
-
-								</div>
-
-							</div>
-							<div class="ds-skill">
-								<h6>Skill <i class="fa fa-code" aria-hidden="true"></i></h6>
-								<div class="skill html">
-									<h6><i class="fab fa-html5"></i> HTML5 </h6>
-									<div class="bar bar-html">
-										<p>95%</p>
-									</div>
-								</div>
-								<div class="skill css">
-									<h6><i class="fab fa-css3-alt"></i> CSS3 </h6>
-									<div class="bar bar-css">
-										<p>95%</p>
-									</div>
-								</div>
-								<div class="skill javascript">
-									<h6><i class="fab fa-js"></i> JavaScript </h6>
-									<div class="bar bar-js">
-										<p>75%</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</th>
-					<th>
-						<div class="card">
-							<div class="ds-top"></div>
-							<div class="avatar-holder">
-								<img src="./mian.jpeg" alt="Albert Einstein">
-							</div>
-							<div class="name">
-								<a href="https://www.instagram.com/adam_k1m1?igsh=MXB6OWN3enRranhueA%3D%3D&utm_source=qr"
-									target="_blank">Muhammad Naim<br>System Administrator</br></a>
-							</div>
-							<div class="ds-info">
-								<div class="ds pens">
-									<h6 title="Number of pens created by the user">STUDENT ID <i class="fas fa-edit">
-											2022777273</i></h6>
-
-								</div>
-
-							</div>
-							<div class="ds-skill">
-								<h6>Skill <i class="fa fa-code" aria-hidden="true"></i></h6>
-								<div class="skill html">
-									<h6><i class="fab fa-html5"></i> HTML5 </h6>
-									<div class="bar bar-html">
-										<p>80%</p>
-									</div>
-								</div>
-								<div class="skill css">
-									<h6><i class="fab fa-css3-alt"></i> CSS3 </h6>
-									<div class="bar bar-css">
-										<p>90%</p>
-									</div>
-								</div>
-								<div class="skill javascript">
-									<h6><i class="fab fa-js"></i> JavaScript </h6>
-									<div class="bar bar-js">
-										<p>55%</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</th>
-					<th>
-						<div class="card">
-							<div class="ds-top"></div>
-							<div class="avatar-holder">
-								<img src="./cami.jpeg" alt="Albert Einstein">
-							</div>
-							<div class="name">
-								<a href="https://www.instagram.com/adam_k1m1?igsh=MXB6OWN3enRranhueA%3D%3D&utm_source=qr"
-									target="_blank">Muhammad Syahmi<br>Programmer</br></a>
-							</div>
-							<div class="ds-info">
-								<div class="ds pens">
-									<h6 title="Number of pens created by the user">STUDENT ID <i class="fas fa-edit">
-											2022770125</i></h6>
-
-								</div>
-
-							</div>
-							<div class="ds-skill">
-								<h6>Skill <i class="fa fa-code" aria-hidden="true"></i></h6>
-								<div class="skill html">
-									<h6><i class="fab fa-html5"></i> HTML5 </h6>
-									<div class="bar bar-html">
-										<p>85%</p>
-									</div>
-								</div>
-								<div class="skill css">
-									<h6><i class="fab fa-css3-alt"></i> CSS3 </h6>
-									<div class="bar bar-css">
-										<p>70%</p>
-									</div>
-								</div>
-								<div class="skill javascript">
-									<h6><i class="fab fa-js"></i> JavaScript </h6>
-									<div class="bar bar-js">
-										<p>50%</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</th>
-					<th>
-						<div class="card">
-							<div class="ds-top"></div>
-							<div class="avatar-holder">
-								<img src="./kimipic.jpeg" alt="Albert Einstein">
-							</div>
-							<div class="name">
-								<a href="https://www.instagram.com/adam_k1m1?igsh=MXB6OWN3enRranhueA%3D%3D&utm_source=qr"
-									target="_blank">Adam Hakimi<br>Web Developer</br></a>
-							</div>
-							<div class="ds-info">
-								<div class="ds pens">
-									<h6 title="Number of pens created by the user">STUDENT ID <i class="fas fa-edit">
-											2022388857</i></h6>
-
-								</div>
-
-							</div>
-							<div class="ds-skill">
-								<h6>Skill <i class="fa fa-code" aria-hidden="true"></i></h6>
-								<div class="skill html">
-									<h6><i class="fab fa-html5"></i> HTML5 </h6>
-									<div class="bar bar-html">
-										<p>95%</p>
-									</div>
-								</div>
-								<div class="skill css">
-									<h6><i class="fab fa-css3-alt"></i> CSS3 </h6>
-									<div class="bar bar-css">
-										<p>90%</p>
-									</div>
-								</div>
-								<div class="skill javascript">
-									<h6><i class="fab fa-js"></i> JavaScript </h6>
-									<div class="bar bar-js">
-										<p>75%</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</th>
-					<th>
-						<div class="card">
-							<div class="ds-top"></div>
-							<div class="avatar-holder">
-								<img src="./jebatzz.jpeg" alt="Albert Einstein">
-							</div>
-							<div class="name">
-								<a href="https://www.instagram.com/adam_k1m1?igsh=MXB6OWN3enRranhueA%3D%3D&utm_source=qr"
-									target="_blank">Muhammad Haritz<br>System Analyst</br></a>
-							</div>
-							<div class="ds-info">
-								<div class="ds pens">
-									<h6 title="Number of pens created by the user">STUDENT ID <i class="fas fa-edit">
-											2022777175</i></h6>
-
-								</div>
-
-							</div>
-							<div class="ds-skill">
-								<h6>Skill <i class="fa fa-code" aria-hidden="true"></i></h6>
-								<div class="skill html">
-									<h6><i class="fab fa-html5"></i> HTML5 </h6>
-									<div class="bar bar-html">
-										<p>95%</p>
-									</div>
-								</div>
-								<div class="skill css">
-									<h6><i class="fab fa-css3-alt"></i> CSS3 </h6>
-									<div class="bar bar-css">
-										<p>60%</p>
-									</div>
-								</div>
-								<div class="skill javascript">
-									<h6><i class="fab fa-js"></i> JavaScript </h6>
-									<div class="bar bar-js">
-										<p>95%</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</th>
-					<th>
-						<div class="card">
-							<div class="ds-top"></div>
-							<div class="avatar-holder">
-								<img src="./mazhan.jpeg" alt="Albert Einstein">
-							</div>
-							<div class="name">
-								<a href="https://www.instagram.com/adam_k1m1?igsh=MXB6OWN3enRranhueA%3D%3D&utm_source=qr"
-									target="_blank">Mohd Mazhan<br>Database Administrator</br></a>
-							</div>
-							<div class="ds-info">
-								<div class="ds pens">
-									<h6 title="Number of pens created by the user">STUDENT ID <i class="fas fa-edit">
-											2022791683 </i></h6>
-
-								</div>
-
-							</div>
-							<div class="ds-skill">
-								<h6>Skill <i class="fa fa-code" aria-hidden="true"></i></h6>
-								<div class="skill html">
-									<h6><i class="fab fa-html5"></i> HTML5 </h6>
-									<div class="bar bar-html">
-										<p>85%</p>
-									</div>
-								</div>
-								<div class="skill css">
-									<h6><i class="fab fa-css3-alt"></i> CSS3 </h6>
-									<div class="bar bar-css">
-										<p>67%</p>
-									</div>
-								</div>
-								<div class="skill javascript">
-									<h6><i class="fab fa-js"></i> JavaScript </h6>
-									<div class="bar bar-js">
-										<p>75%</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</th>
-			</table>
 		</div>
 	</div>
 
@@ -1366,15 +1114,6 @@
 
 	<!-- Link to page
 	================================================== -->
-	<?php
-	function showWhatsappWidget() {
-    ?>
-	<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
-	<div class="elfsight-app-752aad43-5ef5-4b28-9ef5-3f858f07f183" data-elfsight-app-lazy></div>
-	<?php
-	showWhatsappWidget();
-	?>
-	}
 	<!-- partial -->
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
 	<script src="./script.js"></script>
